--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
    <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-   </head>
+       <title>AluraBooks</title>
+       <link rel="stylesheet" href="styles.cess">
+ </head>
+ 
    <body>
     
-   </body>
+  </body>
 
 </html>
