--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>AluraBooks</title>
+       <link rel="stylesheet" href="rest.css">
        <link rel="stylesheet" href="styles.cess">
  </head>
  
    <body>
     <h1>AluraBooks</h1>
-    
+
   </body>
 
 </html>
