--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
        <title>AluraBooks</title>
        <link rel="stylesheet" href="rest.css">
        <link rel="stylesheet" href="styles.cess">
- </head>
- 
-   <body>
-     <header>
-      
-     </header>
+       
+       <header class="cabecalho">
+        <img src="img/Logo.svg" alt="Logo da Alurabooks">
+        <div class="container">
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras"></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"</a>
+        </div>
+    </header>
 
   </body>
 
