--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
        <title>AluraBooks</title>
        <link rel="stylesheet" href="rest.css">
        <link rel="stylesheet" href="styles.cess">
-       
+
        <header class="cabecalho">
+        <samp class="cabeçalho__menu-hamburger"
         <img src="img/Logo.svg" alt="Logo da Alurabooks">
         <div class="container">
             <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
