--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <link rel="stylesheet" href="styles.cess">
 
        <header class="cabecalho">
-        <samp class="cabeçalho__menu-hamburger"
+        <samp class="cabeçalho__menu-hamburger"></samp>
         <img src="img/Logo.svg" alt="Logo da Alurabooks">
         <div class="container">
             <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
