--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
        <link rel="stylesheet" href="styles.cess">
 
        <header class="cabecalho">
+        <div class=container>
         <samp class="cabeçalho__menu-hamburger"></samp>
         <img src="img/Logo.svg" alt="Logo da Alurabooks">
+      </div>
         <div class="container">
             <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
             <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras"></a>
