--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
             <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras"></a>
-            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"</a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
         </div>
     </header>
 
