--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
        <header class="cabecalho">
         <div class=container>
-        <samp class="cabeçalho__menu-hamburger"></samp>
-        <img src="img/Logo.svg" alt="Logo da Alurabooks">
+        <samp class="cabeçalho__menu-hamburger container__imagem"></samp>
+        <img src="img/Logo.svg" alt="Logo da Alurabooks" class=container__imagem>
       </div>
         <div class="container">
-            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-            <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras"></a>
-            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"class=container__imagem></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras"class=container__imagem></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"class=container__imagem></a>
         </div>
     </header>
 
