--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
        <title>AluraBooks</title>
        <link rel="stylesheet" href="rest.css">
        <link rel="stylesheet" href="styles.cess">
+   </head>
+   
 
        <header class="cabecalho">
         <div class=container>
