--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <link rel="stylesheet" href="styles.cess">
    </head>
    
-
+ <body>
        <header class="cabecalho">
         <div class=container>
         <samp class="cabeçalho__menu-hamburger container__imagem"></samp>
