--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
  <body>
        <header class="cabecalho">
         <div class=container>
+          <input type=”checkbox” id=”menu” class=”container__botao”>
+          <label for=”menu”>
         <samp class="cabeçalho__menu-hamburger container__imagem"></samp>
+          </label>
         <img src="img/Logo.svg" alt="Logo da Alurabooks" class=container__imagem>
       </div>
         <div class="container">
