--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
           <label for=”menu”>
         <samp class="cabeçalho__menu-hamburger container__imagem"></samp>
           </label>
+          <ul class=”lista-menu”>
+            <li class=”lista-menu__titulo”>Categorias</li>
+            <li class=”lista-menu__item”>
+              <a href=”#” class=”lista-menu__link”>Programação</a>
+            </li>
+            <li class=”lista-menu__item”>
+              <a href=”#” class=”lista-menu__link”>Programação</a>
+            </li>
+          </ul>
         <img src="img/Logo.svg" alt="Logo da Alurabooks" class=container__imagem>
       </div>
         <div class="container">
