--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
               <a href=”#” class=”lista-menu__link”>Programação</a>
             </li>
             <li class=”lista-menu__item”>
-              <a href=”#” class=”lista-menu__link”>Programação</a>
+              <a href=”#” class=”lista-menu__link”>Front-end</a>
+            </li>
+            <li class=”lista-menu__item”>
+              <a href=”#” class=”lista-menu__link”>infraestrutura</a>
+            </li>
+            <li class=”lista-menu__item”>
+              <a href=”#” class=”lista-menu__link”>Bussiness</a>
+            </li>
+            <li class=”lista-menu__item”>
+              <a href=”#” class=”lista-menu__link”>Design & UX</a>
             </li>
           </ul>
         <img src="img/Logo.svg" alt="Logo da Alurabooks" class=container__imagem>
